Fixed Sidenav z-index bug

--- a/src/app/static/pages/index/index.page.css
+++ b/src/app/static/pages/index/index.page.css
@@ -1,31 +1,4 @@
-.foc-anime svg circle{
-    animation-name: foc-anime;
-    animation-duration: 8s;
-    animation-iteration-count: infinite;
-    animation-direction: alternate-reverse;
 
-}
-
-@keyframes foc-anime {
-    0% {
-        transform: translate(0,0);
-    }
-    20% {
-        transform: translate(-200px,-100px);
-    }
-    40% {
-        transform: translate(-100px, -200px);
-    }
-    60% {
-        transform: translate(500px,-500px);
-    }
-    80% {
-        transform: translate(1000px,100px);
-    }
-    100% {
-        transform: translate(0,0);
-    }
-}
 
 @media (min-width: 768px){
     height: 70%;
